fix padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ a:hover, a:focus {
 
 img {
   margin-right: 10px;
-  margin-top: 6px;
+  margin-top: 5px;
   float: left;
   -webkit-user-select: none;
   -moz-user-select:none;
@@ -69,10 +69,15 @@ img:hover {
 }
 
 .inner {
+    padding-left: 12px;
+    padding-right: 12px;
     margin-left: auto;
     margin-right: auto; 
     max-width: 498px;
 }
 
-@media screen and (max-width: 600px){body{font-size:1.5rem; line-height: 1.5rem;}}
+@media screen and (max-width: 600px){
+    body{font-size:1.5rem; line-height: 1.5rem;
+      }
+}
 
